# DevFestSubmission

./: .gitignore  README.md  render.yaml
Frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
Frontend/src/: App.tsx  main.tsx
Frontend/src/components/: AboutPage.tsx  CreateEventPage.tsx  EventAttendeesPage.tsx  EventsPage.tsx  LandingPage.tsx  ListTicketPage.tsx  ManageEventsPage.tsx  MarketplacePage.tsx  MyTicketsPage.tsx  Navigation.tsx  PurchaseTicketPage.tsx
Frontend/src/imports/: 1512WDefault.tsx
Frontend/src/lib/: api.ts
Frontend/src/types/: index.ts
backend/: README.md
backend/api/: package-lock.json  package.json  pnpm-lock.yaml
backend/api/src/: data.json  db.js  index.js  solana.js  supabase-migration.sql  sync.js
backend/api/src/idl/: ticketchain.json
backend/program/: Anchor.toml  README.md
backend/program/programs/ticketchain/: Cargo.toml
backend/program/programs/ticketchain/src/: lib.rs
