[package]
name = "ticketchain"
version = "0.1.0"
description = "TicketChain event and ticket program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ticketchain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }

# Pin transitive deps that switched to edition 2024 (incompatible with Solana CLI's Cargo 1.84)
blake3 = ">=1.3.1, <1.8"
